tests/paczka1/small_fuzzy/77670591.err
Error in line 1: mSQ86FacCO S832 12,4
Error in line 3: mSQ86FacCO A405 29,8
